# sqlite

./: .gitignore  autogen.sh  configure.ac  makefile.in  readme.md  sqlite.sln
include/sqlite/: sqlite.h
include/sqlite/utility/: function_traits.h
pro/: sqlite.vcxproj  sqlite.vcxproj.filters  test.vcxproj  test.vcxproj.filters
src/: sqlite.cc
src/test/: main.cc  test.cc
