AC_PREREQ([2.69])
AC_CONFIG_AUX_DIR(res)
AC_CONFIG_MACRO_DIR(res)
AC_INIT([lib], [0.1.0], [alexej.h@xiphos.de])
AC_PROG_CXX([clang++-3.7 clang++-3.6 clang++-3.5 clang++37 clang++36 clang++35 clang++])
AX_CXX_COMPILE_STDCXX_14(noext, mandatory)
AM_PROG_AR
AC_PROG_INSTALL
AC_CONFIG_FILES([makefile])
AC_OUTPUT
